src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_recording_link__c</fullName>
        <formula>HYPERLINK(&quot;https://cloud11.contact-world.net/callcentre/callAnalytics/playaudiomatch.aspx?guid=&quot;&amp;CallObject&amp;&quot;&amp;start=0&amp;matched=&quot;, &quot;Call Recording&quot;)</formula>
        <label>Call recording link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Covenant_compliant__c</fullName>
        <label>Covenant compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_capital_weighting__c</fullName>
        <label>Current capital weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_you_speak_to_the_customer__c</fullName>
        <label>Did you speak to the customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Sales_Attempts__c</fullName>
        <description>Note whether this is the first, second or third attempt to contact the customer</description>
        <inlineHelpText>Note whether this is the first, second or third attempt to contact the customer</inlineHelpText>
        <label>Direct Sales Attempts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Call</fullName>
                </value>
                <value>
                    <fullName>2nd Call</fullName>
                </value>
                <value>
                    <fullName>3rd Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_uploaded_to_notes_attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document uploaded to notes &amp; attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Future_capital_weighting1__c</fullName>
        <label>Future capital weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_AIP_APP_Date_Time_of_Call__c</fullName>
        <description>To be completed by HPP Seller to stated date and time of Call to enable mandatory compliance with the T&amp;C observation Scheme</description>
        <label>HPP AIP/APP Date &amp; Time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HPP_Call_type__c</fullName>
        <inlineHelpText>Please enter whther this was an inbound or outbound HPP call</inlineHelpText>
        <label>HPP Call type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please enter whther this was an inbound or outbound call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_met__c</fullName>
        <label>How met?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_where_has_the_query_been_sent__c</fullName>
        <label>If no, where has the query been sent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account services</fullName>
                </value>
                <value>
                    <fullName>BDMs</fullName>
                </value>
                <value>
                    <fullName>Branch network</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Customer care</fullName>
                </value>
                <value>
                    <fullName>FCU</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HPP sales</fullName>
                </value>
                <value>
                    <fullName>HPP sales support</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Sales</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>REAT</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>Team leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impairment_needed__c</fullName>
        <label>Impairment needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Activity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Meeting__c</fullName>
        <label>Location of Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edgware Road</fullName>
                </value>
                <value>
                    <fullName>Leicester</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Off site visit.</fullName>
                </value>
                <value>
                    <fullName>Small Heath</fullName>
                </value>
                <value>
                    <fullName>Southall</fullName>
                </value>
                <value>
                    <fullName>Whitechapel</fullName>
                </value>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>Premier Office</fullName>
                </value>
                <value>
                    <fullName>Luton</fullName>
                </value>
                <value>
                    <fullName>Tooting</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Knightsbridge Branch</fullName>
                </value>
                <value>
                    <fullName>Ilford</fullName>
                </value>
                <value>
                    <fullName>Glasgow</fullName>
                </value>
                <value>
                    <fullName>Wembley</fullName>
                </value>
                <value>
                    <fullName>Head Office</fullName>
                </value>
                <value>
                    <fullName>Bond Street</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Budget_Value__c</fullName>
        <label>Marketing Budget (Value)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time between the agent&apos;s phone ringing and the agent answering the call. For Outbound, this is the time between the customer&apos;s phone ringing and the customer answering the call. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Ring Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time the customer spent connected to an agent. For Outbound, this is the time between the customer answering their phone and the call ending. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Talk Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InteractionQuality__c</fullName>
        <label>Interaction Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Agent__c</fullName>
        <formula>Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_CPF_monitoring_date__c</fullName>
        <label>Next CPF monitoring date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Targeted__c</fullName>
        <label>Number of People Targeted</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <label>Output</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Attended: Sale</fullName>
                </value>
                <value>
                    <fullName>Customer Attended: No sale</fullName>
                </value>
                <value>
                    <fullName>Rebooked Apppointment</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - ANC Sale Completed</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - ANP Sale Completed</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - EKYC Sale Completed</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - SFDC Pack Sent</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - Manual pack sent</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - failed criteria</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - No longer interested</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - Information given to the customer</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - Lead Not Eligible</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - Info only</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - AIP Done</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - AIP &amp; APP Done</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - APP done</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - Rebooked Appointment</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - Follow up call</fullName>
                </value>
                <value>
                    <fullName>HPP Seller - No Show/No Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability_of_default__c</fullName>
        <label>Probability of default</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_resolved_in_1st_call__c</fullName>
        <label>Query resolved in 1st call?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Call__c</fullName>
        <label>Reason for Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Liabilities Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Service Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Care call: 9 day call</fullName>
                </value>
                <value>
                    <fullName>Care call: 9 month call</fullName>
                </value>
                <value>
                    <fullName>Care call: 9 week call</fullName>
                </value>
                <value>
                    <fullName>Sales call: appointment booked/product sold</fullName>
                </value>
                <value>
                    <fullName>Sales call: appointment not booked/product not sold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Call to be made.</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - UID/Successful Call</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - No Answer Left message</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - No answer</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - Callback arranged</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - Unable to proceed Failed Security</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - customer to attend branch</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - Product Sold</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - 60 day withdrawal funds required</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - 60 Day withdrawal funds no longer required</fullName>
                </value>
                <value>
                    <fullName>Direct Sales - Customer not interested</fullName>
                </value>
                <value>
                    <fullName>Retention Letter November 2011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedtoId__c</fullName>
        <formula>WhatId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelatedtoId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_completed_date__c</fullName>
        <label>Review completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_updated__c</fullName>
        <label>Time updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_of_Account_Required__c</fullName>
        <description>Please enter the type of account the Branch Appointment is being booked for.  If the customer is looking for more than one account then you should select the first one you discussed with them.</description>
        <inlineHelpText>Please enter the type of account the Branch Appointment is being booked for.  If the customer is looking for more than one account then you should select the first one you discussed with them.</inlineHelpText>
        <label>Type of Account Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Current</fullName>
                </value>
                <value>
                    <fullName>Personal Savings</fullName>
                </value>
                <value>
                    <fullName>Business Current</fullName>
                </value>
                <value>
                    <fullName>Business Savings</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
                <value>
                    <fullName>HPP</fullName>
                </value>
                <value>
                    <fullName>HTB</fullName>
                </value>
                <value>
                    <fullName>HPS</fullName>
                </value>
                <value>
                    <fullName>HPPP</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <formula>OwnerId</formula>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_a_factfind_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was a factfind completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wrap_code__c</fullName>
        <label>Wrap code level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account closure Enquiry</fullName>
                </value>
                <value>
                    <fullName>Outbound Enquiry</fullName>
                </value>
                <value>
                    <fullName>Savings/Current Account Enquiry</fullName>
                </value>
                <value>
                    <fullName>Branch related enquiry</fullName>
                </value>
                <value>
                    <fullName>Call lost/ cancelled</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Deceased customer</fullName>
                </value>
                <value>
                    <fullName>Dormancy/Return mail</fullName>
                </value>
                <value>
                    <fullName>Online banking/IVR</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Shares enquiry</fullName>
                </value>
                <value>
                    <fullName>Call transferred</fullName>
                </value>
                <value>
                    <fullName>OB call</fullName>
                </value>
                <value>
                    <fullName>Transaction dispute</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Survey</fullName>
                </value>
                <value>
                    <fullName>HPP/ BTL Pre completion</fullName>
                </value>
                <value>
                    <fullName>HPP/ BTL Post completion account enquiry</fullName>
                </value>
                <value>
                    <fullName>Outbound Sales calls</fullName>
                </value>
                <value>
                    <fullName>IFA Appointmnet</fullName>
                </value>
                <value>
                    <fullName>New account enquiry</fullName>
                </value>
                <value>
                    <fullName>Outbound sales callback</fullName>
                </value>
                <value>
                    <fullName>Customer Service callback</fullName>
                </value>
                <value>
                    <fullName>FSCS Enquiry</fullName>
                </value>
                <value>
                    <fullName>Third Party Call</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Personal Finance</fullName>
                </value>
                <value>
                    <fullName>FTD Enquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrap_code_level_2__c</fullName>
        <label>Wrap code level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Wrap_code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint resolution</fullName>
                </value>
                <value>
                    <fullName>CSI</fullName>
                </value>
                <value>
                    <fullName>HPP CSI</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Wrong number</fullName>
                </value>
                <value>
                    <fullName>call transferred due to language barrier</fullName>
                </value>
                <value>
                    <fullName>call transferred to agent</fullName>
                </value>
                <value>
                    <fullName>Call transferred to collections</fullName>
                </value>
                <value>
                    <fullName>call transferred to direct sales</fullName>
                </value>
                <value>
                    <fullName>call transferred to HPP team</fullName>
                </value>
                <value>
                    <fullName>call transferred to IVR</fullName>
                </value>
                <value>
                    <fullName>Call transferred to management/ TL</fullName>
                </value>
                <value>
                    <fullName>Call transferred to other department</fullName>
                </value>
                <value>
                    <fullName>Existing dispute</fullName>
                </value>
                <value>
                    <fullName>New dispute</fullName>
                </value>
                <value>
                    <fullName>Direct debit cancelled</fullName>
                </value>
                <value>
                    <fullName>Direct debit enquriy</fullName>
                </value>
                <value>
                    <fullName>External Notice</fullName>
                </value>
                <value>
                    <fullName>External payment - verified</fullName>
                </value>
                <value>
                    <fullName>General payment enquriy</fullName>
                </value>
                <value>
                    <fullName>High withdrawal over 3k</fullName>
                </value>
                <value>
                    <fullName>High withdrawal over 7k</fullName>
                </value>
                <value>
                    <fullName>Internal notice</fullName>
                </value>
                <value>
                    <fullName>Internal payment</fullName>
                </value>
                <value>
                    <fullName>International payment enquiry</fullName>
                </value>
                <value>
                    <fullName>New standing order instruction</fullName>
                </value>
                <value>
                    <fullName>Notice enquiry</fullName>
                </value>
                <value>
                    <fullName>Standing order amendment</fullName>
                </value>
                <value>
                    <fullName>Standing order cancelled</fullName>
                </value>
                <value>
                    <fullName>Standing order/ Direct debit charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>Time_updated__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>